# plasmidcanvas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  beta_install_and_usage.rst  notes.txt  packaging_plasmid_canvas.rst  packaging_plasmidcanvas.rst  pyproject.toml  readthedocs.yaml  todo.txt
design/requirements/: reqs.md
design/uml/: beta_design.puml  deliverables.txt  design.puml  release_design.puml
docs/: conf.py  curvedtext.rst  index.rst  installation_and_usage.rst  plasmidcanvas.rst  requirements.txt
docs/source/: conf.py  feature.rst  modules.rst  plasmid.rst
docs/usage_guide/source/: beta_install_and_usage.rst  conf.py
plasmidcanvas/: feature.py  plasmid.py  utils.py
src/plasmidcanvas/: _utils.py  curvedtext.py  feature.py  genbank2plasmid.py  graph.py  plasmid.py  testing.py
tests/: concept_test.py  pBR322_basic_example.py  pBR322_curved_example.py  pBR322_overlapping_example.py  plasmid_creation_test.py
usage_guide/source/: index.rst
